@@ -18,6 +18,7 @@
         - Bugfix: Prevent error when parsing one-character commands
         - New fastloader: Ultraboot
         - New fastloader: Hypra-Load
+        - create D64 images in the FAT FS with N: if no image is mounted
 
 2012-02-26 - release 0.10.3
         - Bugfix: Un-break I2C display communication
